--- a/FRONTEND-REACT/src/styles/App.scss
+++ b/FRONTEND-REACT/src/styles/App.scss
@@ -1,4 +1,3 @@
-
 /* RESET */
 
 * {
@@ -11,7 +10,6 @@ fieldset {
 }
 
 :root {
-
   /* COLORS */
 
   --color-black: #000000;
@@ -26,25 +24,21 @@ fieldset {
   --color-dark-lilac: #8176af;
   --color-white-50: rgba(255, 255, 255, 0.5);
 
-
   /* FONTS */
 
-  --font-title-brand: 300 1.4rem 'Poppins', sans-serif;
-  --font-title-biggest: bold 3rem 'Montserrat', sans-serif;
-  --font-title-big: bold 2rem 'Montserrat', sans-serif;
-  --font-title-medium: 300 1.5rem 'Montserrat', sans-serif;
-  --font-text-big: normal 1.2rem 'Montserrat', sans-serif;
-  --font-normal: normal 10px 'Montserrat', sans-serif;
-  --font-button: bold 1rem 'Montserrat', sans-serif;
-  --font-card-text: 300 .8rem 'Poppins', sans-serif;
-  --font-card-section: 300 .8rem 'Poppins', sans-serif;
-  --font-card-title: 500 1.2rem 'Poppins', sans-serif;
-  --font-card-subtitle: 400 1.1rem 'Poppins', sans-serif;
-  --font-card-tech: 500 1rem 'Catamaran', sans-serif;
+  --font-title-brand: 300 1.4rem "Poppins", sans-serif;
+  --font-title-biggest: bold 3rem "Montserrat", sans-serif;
+  --font-title-big: bold 2rem "Montserrat", sans-serif;
+  --font-title-medium: 300 1.5rem "Montserrat", sans-serif;
+  --font-text-big: normal 1.2rem "Montserrat", sans-serif;
+  --font-normal: normal 10px "Montserrat", sans-serif;
+  --font-button: bold 1rem "Montserrat", sans-serif;
+  --font-card-text: 300 0.8rem "Poppins", sans-serif;
+  --font-card-section: 300 0.8rem "Poppins", sans-serif;
+  --font-card-title: 500 1.2rem "Poppins", sans-serif;
+  --font-card-subtitle: 400 1.1rem "Poppins", sans-serif;
+  --font-card-tech: 500 1rem "Catamaran", sans-serif;
 }
-
-
-
 
 :root {
   font: var(--font-normal); /* font-size: 10px; */
@@ -67,7 +61,6 @@ fieldset {
   padding: 22px 22px 0 22px;
   background-color: var(--color-dark);
 }
-
 
 .header {
   display: flex;
@@ -104,14 +97,12 @@ fieldset {
   }
 }
 
-
 .hero {
   margin-bottom: 3rem;
 }
 .landing {
- grid-column: span 2;
- text-align: center;
-
+  grid-column: span 2;
+  text-align: center;
 }
 @media screen and (min-width: 768px) {
   .hero {
@@ -131,13 +122,12 @@ fieldset {
   margin-bottom: 1.8rem;
 }
 
-
 .preview .projectImage {
   width: 100%;
   aspect-ratio: 1 / 1;
   outline: solid 1px pink;
 
-  background-image: url('../images/ebook-example.jpg');
+  background-image: url("../images/ebook-example.jpg");
   background-position: top center;
   background-size: cover;
 }
@@ -160,9 +150,18 @@ fieldset {
   backdrop-filter: blur(10px);
   border-style: solid;
   border-width: 1px;
-  border-image-source: linear-gradient(to bottom, var(--color-white) 0%, rgba(0, 0, 0, 0));
+  border-image-source: linear-gradient(
+    to bottom,
+    var(--color-white) 0%,
+    rgba(0, 0, 0, 0)
+  );
   border-image-slice: 1;
-  background-image: linear-gradient(to bottom, var(--color-white), var(--color-white)), linear-gradient(to bottom, var(--color-white) 0%, rgba(0, 0, 0, 0));
+  background-image: linear-gradient(
+      to bottom,
+      var(--color-white),
+      var(--color-white)
+    ),
+    linear-gradient(to bottom, var(--color-white) 0%, rgba(0, 0, 0, 0));
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
@@ -178,15 +177,22 @@ fieldset {
 }
 
 .card .card__projectTitle::before {
-  content: '';
+  content: "";
   position: absolute;
-  top: calc( 50% - 1px );
-  bottom: calc( 50% - 1px );
+  top: calc(50% - 1px);
+  bottom: calc(50% - 1px);
   left: 0;
   right: 0;
   z-index: 0;
 
-  background-image: linear-gradient(to right, white, #232323 15%, var(--color-black), #232323 85%, white);
+  background-image: linear-gradient(
+    to right,
+    white,
+    #232323 15%,
+    var(--color-black),
+    #232323 85%,
+    white
+  );
 }
 
 .card .card__projectTitle--text {
@@ -207,7 +213,7 @@ fieldset {
   width: 75px;
   height: 75px;
   border-radius: 50%;
-  background-image: url('../images/avatar.webp');
+  background-image: url("../images/avatar.webp");
   background-position: center;
   background-size: cover;
   margin-bottom: 0.8rem;
@@ -219,7 +225,7 @@ fieldset {
 
 .card .card__name {
   font: var(--font-card-title);
-  margin-bottom: .2rem;
+  margin-bottom: 0.2rem;
 }
 
 .card .card__project {
@@ -228,8 +234,8 @@ fieldset {
 
 .card .card__slogan {
   font: var(--font-card-subtitle);
-  margin-top: -.2rem;
-  margin-bottom: .8rem;
+  margin-top: -0.2rem;
+  margin-bottom: 0.8rem;
 }
 
 .card .card__descriptionTitle {
@@ -240,7 +246,7 @@ fieldset {
 .card .card__technicalInfo {
   display: grid;
   grid-template-columns: 1fr 2rem 2rem;
-  gap: .5em;
+  gap: 0.5em;
 
   margin-block: 1.8rem;
 }
@@ -249,8 +255,6 @@ fieldset {
   font: var(--font-card-tech);
 }
 
-
-
 /* FORM */
 
 .addForm {
@@ -258,7 +262,11 @@ fieldset {
 
   box-shadow: 2px 4px 4px 0 rgba(0, 0, 0, 0.25);
   border: solid 1px rgba(0, 0, 0, 0);
-  background-image: radial-gradient(circle at 50% 50%, var(--color-dusk), #211e2e 92%);
+  background-image: radial-gradient(
+    circle at 50% 50%,
+    var(--color-dusk),
+    #211e2e 92%
+  );
 }
 
 .addForm .title {
@@ -272,21 +280,31 @@ fieldset {
   padding-block: 0.4rem;
   margin-block: 0.5rem;
   border: solid 2px transparent;
-  
 
   font: var(--font-title-medium);
   text-align: center;
 }
 
 .addForm .addForm__title:before {
-  content: '';
+  content: "";
   position: absolute;
-  top: 100%; right: 0; bottom: 0; left: 0;
+  top: 100%;
+  right: 0;
+  bottom: 0;
+  left: 0;
 
   margin-bottom: -2px;
   border-radius: inherit;
   background-color: transparent;
-  background-image: linear-gradient(to left, transparent, #343045 25%, #c0b7e8 45%, var(--color-dark-lilac) 65%, #343045 75%, transparent );
+  background-image: linear-gradient(
+    to left,
+    transparent,
+    #343045 25%,
+    #c0b7e8 45%,
+    var(--color-dark-lilac) 65%,
+    #343045 75%,
+    transparent
+  );
 }
 
 .addForm .addForm__group {
@@ -295,7 +313,7 @@ fieldset {
 
 .addForm .addForm__input {
   display: block;
-  width: calc( 100% - 20px );
+  width: calc(100% - 20px);
   margin: 10px auto;
 
   padding: 8.5px 16px 8.5px 16px;
@@ -330,14 +348,14 @@ fieldset {
 }
 
 .addForm .addForm__2col {
-  width: calc( 100% - 20px );
+  width: calc(100% - 20px);
   margin: 10px auto;
   display: flex;
   justify-content: space-between;
 }
 
 .addForm .addForm__2col .addForm__input {
-  width: calc( (100% - .2rem) / 2 );
+  width: calc((100% - 0.2rem) / 2);
   margin: 0;
 }
 
@@ -346,8 +364,6 @@ fieldset {
   justify-content: center;
   padding: 19px;
 }
-
-
 
 /* COMPONENTS */
 
@@ -401,7 +417,11 @@ fieldset {
   text-align: center;
 
   border-radius: 40px;
-  background-image: linear-gradient(to right, var(--color-dark-lilac) -2%, #c0b7e8 98%);
+  background-image: linear-gradient(
+    to right,
+    var(--color-dark-lilac) -2%,
+    #c0b7e8 98%
+  );
 
   cursor: pointer;
 }
@@ -421,7 +441,11 @@ fieldset {
 
   border-radius: 40px;
   background-color: transparent;
-  background-image: linear-gradient(to right, var(--color-dark-lilac) -2%, #c0b7e8 98%);
+  background-image: linear-gradient(
+    to right,
+    var(--color-dark-lilac) -2%,
+    #c0b7e8 98%
+  );
 
   cursor: pointer;
 }
@@ -442,9 +466,23 @@ fieldset {
 }
 
 .icon__www {
-  background-image: url('../images/icons/globe-solid.svg');
+  background-image: url("../images/icons/globe-solid.svg");
 }
 
 .icon__github {
-  background-image: url('../images/icons/github.svg');
+  background-image: url("../images/icons/github.svg");
+}
+.project-detail {
+  grid-column: span 2;
+  display: flex;
+  flex-direction: column;
+}
+
+.project-detail__top {
+  margin-bottom: 1.5rem;
+}
+.project-detail__content {
+  max-width: 420px;
+  margin-inline: auto;
+  width: 100%;
 }
