--- a/FRONTEND-REACT/src/styles/App.scss
+++ b/FRONTEND-REACT/src/styles/App.scss
@@ -430,7 +430,7 @@ fieldset {
   display: block;
   width: 145px;
 
-  margin-inline: auto;
+  margin-inline: 8px;
   margin-block: 8px;
   padding: 5px 18px;
   color: var(--color-white);
